# cube-solver-suite

./: .travis.yml  Cargo.toml
cube/: Cargo.toml
cube/src/: lib.rs  parser.rs  sticker_cube.rs
roux/: Cargo.toml
roux/src/: cmll.rs  first_block.rs  lib.rs
solver/: Cargo.toml
solver/src/: iddfs.rs  index.rs  lib.rs  pruning.rs  transition.rs
web-frontend/: Cargo.toml
web-frontend/js/: solver.js
web-frontend/src/: interop.rs  lib.rs
web-frontend/static/: index.html
