[package]
name = "web-frontend"
version = "0.1.0"
authors = ["Joey Gouly <joey.gouly@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cube = { path = "../cube" }
roux = { path = "../roux" }
solver = { path = "../solver" }

lazy_static = "1"
miniserde = "0.1"

wasm-bindgen = "*"
